# opencv-learning-homework

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
